src/tests/snapshots/cendol__tests__lexer_snapshot__identifiers.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 112
expression: tokens
---
- Identifier: foo
- Identifier: bar
- Identifier: _baz
- Identifier: foo123
