src/tests/snapshots/cendol__tests__lexer_snapshot__mixed.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 119
expression: tokens
---
- Simple: Int
- Identifier: main
- Simple: LeftParen
- Simple: RightParen
- Simple: LeftBrace
- Simple: Return
- IntegerConstant: 0
- Simple: Semicolon
- Simple: RightBrace
