src/tests/snapshots/cendol__tests__lexer_snapshot__punctuators.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 63
expression: tokens
---
- Simple: LeftBracket
- Simple: RightBracket
- Simple: LeftParen
- Simple: RightParen
- Simple: LeftBrace
- Simple: RightBrace
