src/tests/snapshots/cendol__tests__lexer_snapshot__string_concatenation.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 98
expression: tokens
---
- StringLiteral: hello world
