src/tests/snapshots/cendol__tests__lexer_snapshot__string_concatenation_with_escapes.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 105
expression: tokens
---
- StringLiteral: "hello\nworld"
