src/tests/snapshots/cendol__tests__lexer_snapshot__string_literals.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 91
expression: tokens
---
- StringLiteral: "hellohello\nworld\"quoted\""
