src/tests/snapshots/cendol__tests__lexer_snapshot__unknown_tokens.snap
---
source: src/tests/lexer_snapshot.rs
assertion_line: 126
expression: tokens
---
- Simple: Unknown
- Simple: Unknown
- Simple: Unknown
